--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title>Page Title</title>
+<title>Index</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="">
-<style>
-</style>
-<script src=""></script>
 <!--- Code above this line will not be displayed on the browser --> 
+<head>
+		<link rel="stylesheet" type=text/css href="styles.css">
+</head>
 <body>
-<p> Hello world! “My name is carmen”</p>
+	<header> <h1>Welcome to Carmen Polzin's Webpage</h1></header>
+<aside>
+	<p> <h2>In this page, you can find everything you may want to know about me </h2> 
+		<h3> Click on the different links to navigate around this site <h3>
+		    <td><nav><a href="file:///Users/carmenpolzin/Desktop/LIS%20/LIS%20Website/AboutMe/AboutMe.html">About me</a></li></nav></td>
+		    <td><nav><a href="file:///Users/carmenpolzin/Desktop/LIS%20/LIS%20Website/Jobs/Jobs.html">Jobs</a></li></nav></td>
+		<h3> If you have any comments, questions, or concerns, find my contact info on this page!<h3>
+			<td><nav><a href="file:///Users/carmenpolzin/Desktop/LIS%20/LIS%20Website/ContactMe/ContactMe.html">Contact Me</a></li></nav></td>
+	</p>
+</aside>
+<article>
+	<!-- make this image work -->
+	<img src="carmen.JPG" alt = "Picture of Carmen">
+
+</article>
 </body>
 </html>
