--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
 <body>
 	<header> <h1>Welcome to Carmen Polzin's Webpage</h1></header>
-<aside>
+<aside class="indexAside">
 	 <h2>In this page, you can find everything you may want to know about me </h2>
 		<h3> Click on the different links to navigate around this site </h3>
-		    <nav><a href="file:///Users/carmenpolzin/Desktop/LIS%20/LIS%20Website/AboutMe/AboutMe.html">About me</a></nav>
-		    <nav><a href="file:///Users/carmenpolzin/Desktop/LIS%20/LIS%20Website/Jobs/Jobs.html">Jobs</a></nav>
+		    <nav class= "indexNav"><a href="file:///Users/carmenpolzin/Desktop/LIS%20/LIS%20Website/AboutMe/AboutMe.html">About me</a></nav>
+		    <nav class= "indexNav"><a href="file:///Users/carmenpolzin/Desktop/LIS%20/LIS%20Website/Jobs/Jobs.html">Jobs</a></nav>
 		<h3> If you have any comments, questions, or concerns, find my contact info on this page!</h3>
-			<nav><a href="file:///Users/carmenpolzin/Desktop/LIS%20/LIS%20Website/ContactMe/ContactMe.html">Contact Me</a></nav>
+			<nav class= "indexNav"><a href="file:///Users/carmenpolzin/Desktop/LIS%20/LIS%20Website/ContactMe/ContactMe.html">Contact Me</a></nav>
 </aside>
 <article>
 	<!-- make this image work -->
