--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Index</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <!--- Code above this line will not be displayed on the browser --> 
-<link rel="stylesheet" type=text/css href="styles.css">
+<link rel="stylesheet" type=text/css href="carmenpolzin1.github.io/styles.css">
 
 <body>
 	<header> <h1>Welcome to Carmen Polzin's Webpage</h1></header>
