--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Index</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <!--- Code above this line will not be displayed on the browser --> 
-<link rel="stylesheet" type=text/css href="https://github.com/carmenpolzin1/carmenpolzin1.github.io/blob/9cbc1e504952d7218c35bd5c4c0d3548d2d6d71a/styles.css">
+<link rel="stylesheet" type=text/css href="styles.css">
 
 <body>
 	<header> <h1>Welcome to Carmen Polzin's Webpage</h1></header>
