--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <aside class="indexAside">
 	 <h2>In this page, you can find everything you may want to know about me </h2>
 		<h3> Click on the different links to navigate around this site </h3>
-		    <nav class= "indexNav"><a href="https://github.com/carmenpolzin1/carmenpolzin1.github.io/blob/b66392924290840094c9ef7f805afc39d2f02493/AboutMe.html">About me</a></nav>
+		    <nav class= "indexNav"><a href="AboutMe.html">About me</a></nav>
 		    <nav class= "indexNav"><a href="https://github.com/carmenpolzin1/carmenpolzin1.github.io/blob/b66392924290840094c9ef7f805afc39d2f02493/Jobs.html">Jobs</a></nav>
 		<h3> If you have any comments, questions, or concerns, find my contact info on this page!</h3>
 			<nav class= "indexNav"><a href="https://github.com/carmenpolzin1/carmenpolzin1.github.io/blob/b66392924290840094c9ef7f805afc39d2f02493/ContactMe.html">Contact Me</a></nav>
