--- a/AboutMe.html
+++ b/AboutMe.html
@@ -20,9 +20,9 @@
 
 <footer> 
 	<ul>
-		<li><nav><a href="file:///Users/carmenpolzin/Desktop/LIS%20/LIS%20Website/index/index.html">Index</a></nav></li>
-		<li><nav><a href="file:///Users/carmenpolzin/Desktop/LIS%20/LIS%20Website/ContactMe/ContactMe.html">ContactMe</a></nav></li>
-		<li><nav><a href="/Users/carmenpolzin/Desktop/LIS%20/LIS%20Website/Jobs/Jobs.html#">Jobs</a></nav></li>
+		<li><nav><a href="index.html">Index</a></nav></li>
+		<li><nav><a href="ContactMe.html">ContactMe</a></nav></li>
+		<li><nav><a href="Jobs.html">Jobs</a></nav></li>
 	</ul>
 </footer>
 
