--- a/Jobs.html
+++ b/Jobs.html
@@ -9,7 +9,7 @@
 	<h1>Jobs</h1>
 <article class = "resumepdf">
 	<!--- include descriptive list of jobs and insert resume --> 
-	<embed src="file:///Users/carmenpolzin/Desktop/LIS%20/LIS%20Website/Jobs/Resume.pdf" type="application/pdf">
+	<embed src="Resume.pdf" type="application/pdf">
 </article>
 <aside class="aside2">
 	<dl>
