--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	 <h2>In this page, you can find everything you may want to know about me </h2>
 		<h3> Click on the different links to navigate around this site </h3>
 		    <nav class= "indexNav"><a href="AboutMe.html">About me</a></nav>
-		    <nav class= "indexNav"><a href="Jobs.html">Jobs</a></nav>
+		    <nav class= "indexNav"><a href="Jobs.html#">Jobs</a></nav>
 		<h3> If you have any comments, questions, or concerns, find my contact info on this page!</h3>
 			<nav class= "indexNav"><a href="ContactMe.html">Contact Me</a></nav>
 </aside>
