--- a/ContactMe.html
+++ b/ContactMe.html
@@ -24,7 +24,7 @@
 <footer> 
 	<ul>
 		<li><nav><a href="index.html">Index</a></nav></li>
-		<li><nav><a href="ContactMe.html">ContactMe</a></nav></li>
+		<li><nav><a href="AboutMe.html">About Me</a></nav></li>
 		<li><nav><a href="Jobs.html#">Jobs</a></nav></li>
 	</ul>
 </footer>
