--- a/ContactMe.html
+++ b/ContactMe.html
@@ -17,7 +17,7 @@
 		<input type= "text" name = lastname> <br>
 		Type here: <br>
 		<input type= "text" name = comments> <br>
-		<button type="button">Send!</button>
+		<nav><a href="ThankYou.html">Click here to send</a></nav>
 	</form>
 	<br>
 
