--- a/AboutMe.html
+++ b/AboutMe.html
@@ -16,6 +16,7 @@
 <article class = "articleAM">
 	<p> Carmen is 21 years old and is a computer science major from Seattle,Washington. She has always had a passion for technology ever since she was little and has continued to learn more through classes, projects, and internships. She started college at the University of Wisconsin-Madison in 2020 and has since gained valuable experience through her classes and a technology consulting internship. 
 	</p>
+	<p> For more information, click <nav><a href="www.linkedin.com/in/carmenpolzin"> HERE</a></nav> to sent</p>
 </article>
 
 <footer> 
