--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </aside>
 <article>
 	<!-- make this image work -->
-	<img src="carmen.JPG" alt = "Picture of Carmen">
+	<img src="camen.JPG" alt = "Picture of Carmen">
 
 </article>
 </body>
