--- a/AboutMe.html
+++ b/AboutMe.html
@@ -9,9 +9,8 @@
 	<h1>About Carmen!</h1>
 <aside class="asideAM">
 	<!-- make this image work -->
-	<img src="carmen.JPG" alt = "Picture of Carmen with family and dog">
-	<img src="carmen.JPG" alt = "Picture of Carmen with friends">
-	<img src="carmen.JPG" alt = "University of Wisconsin School Logo">
+	<img src="omsiPic.jpeg" alt = "Picture of Carmen with her family">
+	<img src="gradpic.jpg" alt = "Another picture of carmen with her family at her brother's graduation">
 </aside>
 <article class = "articleAM">
 	<p> Carmen is 21 years old and is a computer science major from Seattle,Washington. She has always had a passion for technology ever since she was little and has continued to learn more through classes, projects, and internships. She started college at the University of Wisconsin-Madison in 2020 and has since gained valuable experience through her classes and a technology consulting internship. 
