--- a/AboutMe.html
+++ b/AboutMe.html
@@ -9,13 +9,13 @@
 	<h1>About Carmen!</h1>
 <aside class="asideAM">
 	<!-- make this image work -->
-	<img src="omsiPic.jpeg" alt = "Picture of Carmen with her family">
-	<img src="gradpic.jpg" alt = "Another picture of carmen with her family at her brother's graduation">
+	<img src="omsiPic.jpeg" alt = "Picture of Carmen with her family" style="width:500px;height:300px;">
+	<img src="gradpic.jpg" alt = "Another picture of carmen with her family at her brother's graduation" style="width:500px;height:300px;">
 </aside>
 <article class = "articleAM">
 	<p> Carmen is 21 years old and is a computer science major from Seattle,Washington. She has always had a passion for technology ever since she was little and has continued to learn more through classes, projects, and internships. She started college at the University of Wisconsin-Madison in 2020 and has since gained valuable experience through her classes and a technology consulting internship. 
 	</p>
-	<p> For more information, click <nav><a href="www.linkedin.com/in/carmenpolzin"> HERE</a></nav> to sent</p>
+	<p> More information can be found: <nav><a href="www.linkedin.com/in/carmenpolzin"> HERE</a></nav></p>
 </article>
 
 <footer> 
