--- a/ContactMe.html
+++ b/ContactMe.html
@@ -7,7 +7,7 @@
 <!--- Code above this line will not be displayed on the browser --> 
 <body>
 	<h1>Contact Me!</h1>
-	<article class="ContactMeArt"> <p style="font-size: 30px">Questions, </p><p style="font-size: 30px">Comments, </p><p style="font-size: 30px">Concerns,</p> <p style="font-size: 30px">What to leave a note? </p><p style="font-size: 30px">Please send it here!</p></article>
+	<article class="ContactMeArt" style="text-align: center;"> <p style="font-size: 30px">Questions, </p><p style="font-size: 30px">Comments, </p><p style="font-size: 30px">Concerns,</p> <p style="font-size: 30px">What to leave a note? </p><p style="font-size: 30px">Please send it here!</p></article>
 	<form class="formContactMe"> 
 		Please Enter Your Email Here: 
 		<input type= "text" name = email> <br>
@@ -17,7 +17,7 @@
 		<input type= "text" name = lastname> <br>
 		Type here: <br>
 		<input type= "text" name = comments> <br>
-		<nav><a href="ThankYou.html">Click here to send</a></nav>
+		<nav style="font-family: courier"><a href="ThankYou.html">Click here to send</a></nav>
 	</form>
 	<br>
 
