--- a/AboutMe.html
+++ b/AboutMe.html
@@ -14,7 +14,7 @@
 </aside>
 <article class = "articleAM">
 	<p> Carmen is 21 years old and is a computer science major from Seattle,Washington. She has always had a passion for technology ever since she was little and has continued to learn more through classes, projects, and internships. She started college at the University of Wisconsin-Madison in 2020 and has since gained valuable experience through her classes and a technology consulting internship. </p>
-	<p style="font-weight: bold"> For more information, click </p><nav><a href="www.linkedin.com/in/carmenpolzin"><strong>HERE</strong></a></nav>
+	<p style="font-weight: bold"> For more information, click </p><nav><a href="https://www.linkedin.com/in/carmenpolzin/"><strong>HERE</strong></a></nav>
 </article>
 
 <footer> 
